--- a/_sass/components/_side-by-side.scss
+++ b/_sass/components/_side-by-side.scss
@@ -1,7 +1,7 @@
 .side-by-side
 {
   width: 130%;
-  margin: 6rem 0 6rem -15%;
+  margin: calc(6rem * 0.625) 0 calc(6rem * 0.625) -15%;
 
   > .toleft, > .toright
   {
@@ -29,6 +29,6 @@
   > .toleft > p,
   > .toright > p
   {
-    margin: 0 0 4rem 0;
+    margin: 0 0 calc(4rem * 0.625) 0;
   }
 }
