--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,8 +1,13 @@
-.header-home
-{
+.header {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  font-size: max(min(1.3vw, 16px), 13px);
+}
 
+.header-home
+{
   margin: 0 auto;
   text-align: center;
   
@@ -15,15 +20,15 @@
   {
     height: auto;
     width: auto;
-    max-height: 125px;
-    max-width: 125px;
-    margin-bottom: 25px;
+    max-height: 7.8em;
+    max-width: 7.8em;
+    margin-bottom: 1.5em;
   }
 
   > .title
   {
-    font-size: calc(4rem * 0.625);
-    margin: 0 0 13px;
+    font-size: 2.5em;
+    margin: 0 0 .8em;
     
     a {
       text-decoration: none;
@@ -33,12 +38,12 @@
 
   > .description
   {
-    font-size: calc(1.85rem * 0.625);
+    font-size: 1.1em;
     font-weight: 300;
     font-style: normal;
     color: $gama;
     width: 70%;
-    margin: 0 auto 1rem;
+    margin: 0 auto 1em;
 
     a
     {
