Make header navigation always show links
It was confusing when you clicked a link and navigation changed in drastic ways, now that I'm adding one more page. We'll instead
mark the navigation items as active, so that you know where you are (if you didn't already).

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="wrapper-normal">
-      <div class="page {{ page.class }} {% if page.collection %}{{ page.collection }}-collection{% endif %}">
+      <div class="page {{ page.active }} {% if page.collection %}{{ page.collection }}-collection{% endif %}">
         {{ content }}
       </div>
     </div>
