--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -12,23 +12,18 @@
 
   <nav class="main-nav">
     <ul class="list">
-      {% if page.path != "index.html" %}
-      <li class="item">
+      <li class="item {% if page.active == "home" %}active{% endif %}">
         <a class="link" href="{% link index.html %}">Home</a>
       </li>
-      {% endif %}
 
-      {% if page.path != "articles/index.html" %}
-      <li class="item">
+      <li class="item {% if page.active == "articles" %}active{% endif %}">
         <a class="link" href="{% link articles/index.html %}">Articles</a>
       </li>
-      {% endif %}
 
-      {% if page.path != "about-me/index.html" %}
-      <li class="item">
+
+      <li class="item {% if page.active == "about-me" %}active{% endif %}">
         <a class="link" href="{% link about-me/index.html %}">About Me</a>
       </li>
-      {% endif %}
     </ul>
   </nav>
 </section>
