--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png">
+    <link rel="me" href="https://ruby.social/@burgestrand">
 
     <meta name=description content="{{ site.description }}">
     <meta name=author content="{{ site.author }}">
