Lets see if we can add tailwind here

--- a/_includes/layout/social-links.html
+++ b/_includes/layout/social-links.html
@@ -1,6 +1,6 @@
 <nav class="social-links">
   {% for social in site.data.social %}
-    <a class="link" data-title="{{ social.title }}" href="{{ social.url }}" target="_blank">
+    <a class="link {{ social.class }}" data-title="{{ social.title }}" href="{{ social.url }}" target="_blank">
       <svg class="icon icon-{{ social.icon }}"><use xlink:href="#icon-{{ social.icon }}"></use></svg>
     </a>
   {% endfor %}
