--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     <link rel="canonical" href="{{ page.url | absolute_url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{% link feed.xml %}" />
 
+    <link rel="stylesheet" href="{% link assets/stylesheets/tailwind.css %}">
     <link rel="stylesheet" href="{% link assets/stylesheets/main.scss %}">
   </head>
   <body>
