Add link to Varvet

--- a/src/components/Header/Socials.astro
+++ b/src/components/Header/Socials.astro
@@ -1,5 +1,6 @@
 ---
 const socials = [
+  { text: "Varvet", url: "https://kim.varvet.com/" },
   { text: "GitHub", url: "https://github.com/burgestrand" },
   { text: "LinkedIn", url: "https://linkedin.com/in/burgestrand" },
   { text: "Mastodon", url: "https://ruby.social/@burgestrand" },
