--- a/src/layouts/FullPageLayout.astro
+++ b/src/layouts/FullPageLayout.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout>
-  <main class="flex flex-col items-center justify-center min-h-full gap-4">
+  <main class="flex flex-col items-center justify-center min-h-full gap-4 p-4">
     <slot />
   </main>
 </Layout>
